<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/add_note"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/note_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/note_ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>