<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/placeOfWork_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeOfWork"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/position_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/star_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeOfWork"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/star_big_on"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/book_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/position"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/dictionary_icon"/>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
